--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/auctionshop
 spring.datasource.username=postgres
 spring.datasource.password=103051
 spring.jpa.properties.javax.persistence.validation.mode = none
+
+
+#spring.session.store-type=redis
