--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.3.1",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
