--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,4 +1,21 @@
 spring:
+  datasource:
+    password: 12345
+    url: jdbc:postgresql://localhost:5432/auctionshop
+    username: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        show_sql: true
+        use_sql_comments: true
+      javax:
+        persistence:
+          validation:
+            mode: none
   redis:
     host: localhost
     port: 6379
